grafana/grafana-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/description: custom-grafana
  name: custom-grafana
